generated/checkers/refine/KN-Uninit-Data-3948abaa-1/build_logs/syntax-repair-refine-2-0/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::functionLikelyReturnsWriteLen(const clang::ento::CallEvent&, clang::ento::CheckerContext&, unsigned int&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:314:75: warning: ‘bool llvm::StringRef::endswith(llvm::StringRef) const’ is deprecated: Use ends_with instead [-Wdeprecated-declarations]
  314 |   if (Name.contains("_to_buf") || Name.contains("to_buf") || Name.endswith("_tobuffer") || Name.contains("_copy_to_buf")) {
      |                                                              ~~~~~~~~~~~~~^~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/SmallString.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/StringRef.h:278:27: note: declared here
  278 |         "ends_with") bool endswith(StringRef Suffix) const {
      |                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::SymExpr* {anonymous}::SAGenTestChecker::peelCastsToSymbol(clang::ento::SVal) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:350:29: error: ‘class clang::ento::SVal’ has no member named ‘getAsSymExpr’; did you mean ‘getAsSymbol’?
  350 |   if (const SymExpr *SE = V.getAsSymExpr()) {
      |                             ^~~~~~~~~~~~
      |                             getAsSymbol
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:357:29: error: cannot convert ‘const clang::ento::SymExpr* const*’ to ‘clang::ento::SymbolRef’ {aka ‘const clang::ento::SymExpr*’} in return
  357 |       return cast<SymbolRef>(Cur);
      |              ~~~~~~~~~~~~~~~^~~~~
      |                             |
      |                             const clang::ento::SymExpr* const*
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
